[package]
name = "maud_bug"
version = "0.1.0"
authors = ["Aaron Hill <aa1ronham@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maud = {git = "https://github.com/aknuds1/maud", rev = "949032771df180f1914ec5e0850c8503db508370"}
